--- a/js/手写防抖-节流.md
+++ b/js/手写防抖-节流.md
@@ -19,9 +19,23 @@ box.onclick = function () {
 ```
 匿名函数优势：不会创建变量，所以说在内存上就不会造成不必要的浪费，还有就是代码看上去会更加简洁，但是匿名函数不能重复调用
 
-note: 在使用DOM2事件绑定的时候，如果我们有要移除事件的逻辑，请不要使用匿名函数，因为匿名函数我们是无法用代码找到该函数的。
+*Note*: 在使用DOM2事件绑定的时候，如果我们有要移除事件的逻辑，请不要使用匿名函数，因为匿名函数我们是无法用代码找到该函数的。
 > box.addEventListener('click',fn) <br>
 box.removeEventListener('click',fn)
+
+返回匿名函数的主要目的是将函数作为结果返回，以便在其他地方调用该函数。这样可以实现延迟执行或将函数作为参数传递给其他函数等功能。
+```js
+function createAdder(x) {
+  return function(y) {
+    return x + y;
+  };
+}
+
+var add5 = createAdder(5);
+console.log(add5(2)); // 输出 7
+
+```
+
 
 ### 立即执行函数
 ```js
@@ -32,7 +46,7 @@ box.removeEventListener('click',fn)
 ```
 
 ### 箭头函数
-- 函数体内的this ，是定义时所在的对象，而不是使用时所在的对象
+- 函数体内的this ，是定义时所在的对象，而不是使用时所在的对象;箭头函数没有它自己的this值，箭头函数内的this值继承自外围作用域。
 - 不可以当作构造函数，不可以使用new 命令
 - 不可以使用arguments对象，因为不存在，可以使用...params 代替
 
@@ -53,6 +67,51 @@ let test = (...params) => {
 2. 在代码中引用了自由变量
 
 ```
+必刷题1
+```js
+var data = [];
+
+for (var i = 0; i < 3; i++) {
+  data[i] = function () {
+    console.log(i);
+  };
+}
+
+data[0]();  //  3
+data[1]();  //  3
+data[2]();  //  3
+```
+
+必刷题2
+```js
+var data = [];
+
+for (var i = 0; i < 3; i++) {
+  data[i] = (function (i) {
+    return function() {
+      console.log(i);
+    }
+  })(i);
+}
+
+data[0]();  //  0
+data[1]();  //  1
+data[2]();  //  2
+
+//  or
+
+var data = [];
+
+for (var i = 0; i < 3; i++) {
+  data[i] = (function () {
+      console.log(i);
+  })();
+}
+
+data[0];  //  0
+data[1];  //  1
+data[2];  //  2
+```
 
 
 ### 防抖
@@ -64,6 +123,62 @@ let test = (...params) => {
 - 表单验证
 
 ```js
+//  第一版
+function debounce(func, wait) {
+  var timeout;
+  return function () {
+    clearTimeout(timeout)
+    timeout = setTimeout(func, wait)
+  }
+}
+
+//  第二版 将this 指向正确的对象
+function debounce(func, wait) {
+  var timeout;
+
+  return function () {
+    var context = this
+
+    clearTimeout(timeout)
+    timeout = setTimeout(function (){
+      func.apply(context)
+    }, wait)
+  }
+}
+
+//  第三版 收集event对象
+function debounce(func, wait) {
+  var timeout = null;
+
+  return function (...args) {
+    var context = this
+
+    clearTimeout(timeout)
+    timeout = setTimeout(function (){
+      func.apply(context, args) //  apply 传入数组参数
+    }, wait)
+  }
+}
+
+//  第四版 是否立即执行flag
+function debounce(func, wait, immediate) {
+  var timeout = null;
+
+  return function (...args) {
+    var context = this
+
+    clearTimeout(timeout)
+
+    if (immediate && !timeout) {
+      func.apply(context, args)
+    }
+
+    timeout = setTimeout(function (){
+      func.apply(context, args)
+    }, wait)
+
+  }
+}
 
 ```
 
@@ -73,6 +188,38 @@ let test = (...params) => {
 场景：
 - 滚动加载
 
-```js
+关于节流的实现，有两种主流的实现方式，一种是使用时间戳，一种是设置定时器。
 
+使用时间戳
+> 第一次事件肯定触发，最后一次不会触发
+```js
+function throttle(func, wait) {
+  let pre = 0
+
+  return function(...args) {
+    if (Date.now() - pre > wait) {
+      func.apply(this, args)
+      pre = Date.now()
+    }
+  }
+}
+```
+
+设置定时器
+> 第一次事件不会触发，最后一次一定触发
+
+```js
+function throttle(func, wait) {
+  let timeout = null
+
+  return function(...args) {
+    if (!timeout) {
+      timeout = setTimeout(() => {
+        //  执行的时候吧timeout cancel
+        timeout = null
+        func.apply(this, args)
+      }, wait)
+    }
+  }
+}
 ```
