feat: update 拷贝相关

--- a/js/浅拷贝-深拷贝.md
+++ b/js/浅拷贝-深拷贝.md
@@ -41,9 +41,12 @@ const obj2=JSON.parse(JSON.stringify(obj1));
 var shallowCopy = function (target) {
   if (typeof target !== 'object') return 
   const result = Array.isArray(target) ? [] : {}
-
+  //  遍历target属性，in 方法会遍历，不仅遍历对象自身属性，还会遍历继承的inumerable 属性
   for (ele in target) {
-    result[ele] = target[ele]
+    //  判断是target自身的属性才拷贝
+    if (target.hasOwnProperty(ele)) {
+      result[ele] = target[ele]
+    }
   }
 
   return result
@@ -52,12 +55,89 @@ var shallowCopy = function (target) {
 ```
 
 
-- 手写循环递归
+- 手写循环递归 深拷贝
 ```js
+var deepCopy = function (target) {
+  if (typeof target !== 'object') return 
+  const result = Array.isArray(target) ? [] : {}
+  //  遍历target属性，in 方法会遍历，不仅遍历对象自身属性，还会遍历继承的inumerable 属性
+  for (ele in target) {
+    //  判断是target自身的属性才拷贝
+    if (target.hasOwnProperty(ele)) {
+      result[ele] = typeof target[ele] === 'object' ? deepCopy(target[ele]) : target[ele]
+    }
+  }
+
+  return result
+}
+//  问题：值为null会赋值一个空对象
 ```
 
-note: 
+```js
+//  对象循环引用的例子
+const obj1 = {};
+const obj2 = {};
+
+obj1.ref = obj2;
+obj2.ref = obj1;
+
+console.log(obj1); // 输出: { ref: { ref: [Circular] } }
+console.log(obj2); // 输出: { ref: { ref: [Circular] } }
 ```
+
+比较完美的深拷贝例子
+```js
+function isRegExp(obj) {
+  return Object.prototype.toString.call(obj) === '[object RegExp]'
+}
+function isDate(obj) {
+  return Object.prototype.toString.call(obj) === '[object Date]'
+}
+function isSet(obj) {
+  return Object.prototype.toString.call(obj) === '[object Set]'
+}
+function isObject(obj) {
+  return typeof obj === 'object'
+  // return Object.prototype.toString.call(obj) === '[object Object]'
+}
+function isArray(obj) {
+  return Object.prototype.toString.call(obj) === '[object Array]' 
+  //  return Array.isArray(obj)
+}
+//  涵盖所有类型的复制
+function deepCopy(obj, map = new WeakMap()) {
+  //  判断是否为regExp / Date / Set
+  if (isRegExp(obj) || isDate(obj) || isSet(obj)) {
+    return new obj.constructor(obj) //  类似于new Date()  ！！！记住加上参数
+  }
+  //  判断是否为null
+  if (obj === null) return obj
+  //  基本类型值 & function
+  if (typeof obj !== 'object') return obj
+  //  赋值循环引用的结果
+  if (map.has(obj)) {
+    return map.get(obj)
+  }
+
+  const cloneObj = Array.isArray(obj) ? [] : {}
+  //  let cloneObj = new obj.constructor(); 与上一句话等价
+  // 缓存循环引用的拷贝结果！！！！！！
+  map.set(obj, cloneObj)
+  //  会把原型链上的属性都遍历！！！！！
+  for (let prop in obj) {
+    //  过滤，仅复制自身属性！！！！！！！！
+    if (obj.hasOwnProperty(prop)) {
+      cloneObj[prop] = deepCopy(obj[prop])
+    }
+  }
+
+  return cloneObj
+
+}
+```
+
+Note: 
+```js
 Set [Set类似于集合]
 成员唯一、无序且不重复de 存储任何类型
 [value, value]，键值与键名是一致的（或者说只有键值，没有键名）
@@ -97,6 +177,7 @@ WeakMap
 只接受对象作为键名（null除外），不接受其他类型的值作为键名
 键名是弱引用，键值可以是任意的，键名所指向的对象可以被垃圾回收，此时键名是无效的
 不能遍历，方法有get、set、has、delete
+
 const wm1 = new WeakMap();
 const wm2 = new WeakMap();
 const wm3 = new WeakMap();
