feat: update 拷贝file

--- a/js/浅拷贝-深拷贝.md
+++ b/js/浅拷贝-深拷贝.md
@@ -18,8 +18,8 @@ const a2 = [...a1]  //  等同于 arr.slice()
 - _.cloneDeep(): lodash 库方法
 ```js
 const obj2 = _.cloneDeep(obj1);
-
 ```
+
 - jQuery.extend()
 ```js
 const $ = require('jquery');
@@ -31,11 +31,13 @@ const obj1 = {
 const obj2 = $.extend(true, {}, obj1);
 console.log(obj1.b.f === obj2.b.f); // false
 ```
+
 - JSON.stringify()
 ```js
 const obj2=JSON.parse(JSON.stringify(obj1));
 //  但是这种方式存在弊端，会忽略undefined、symbol和函数
 ```
+
 如何实现一个对象或者数组的浅拷贝
 ```js
 var shallowCopy = function (target) {
@@ -51,9 +53,7 @@ var shallowCopy = function (target) {
 
   return result
 }
-
 ```
-
 
 - 手写循环递归 深拷贝
 ```js
@@ -136,7 +136,7 @@ function deepCopy(obj, map = new WeakMap()) {
 }
 ```
 
-Note: 
+补充知识点: 
 ```js
 Set [Set类似于集合]
 成员唯一、无序且不重复de 存储任何类型
