feat: update 拷贝file

--- a/js/浅拷贝-深拷贝.md
+++ b/js/浅拷贝-深拷贝.md
@@ -55,7 +55,7 @@ var shallowCopy = function (target) {
 }
 ```
 
-- 手写循环递归 深拷贝
+手写循环递归 深拷贝
 ```js
 var deepCopy = function (target) {
   if (typeof target !== 'object') return 
