--- a/js/浅拷贝-深拷贝.md
+++ b/js/浅拷贝-深拷贝.md
@@ -1,9 +1,9 @@
 ## 知识回顾
 
-> 浅拷贝只复制地址值，实际上还是指向同一堆内存中的数据
-<br>深拷贝则是重新创建了一个相同的数据，修改属性不影响原来的值
+> 浅拷贝只复制地址值,实际上还是指向同一堆内存中的数据
+<br>深拷贝则是重新创建了一个相同的数据,修改属性不影响原来的值
 
-数组/对象浅拷贝【如果里面的元素是基本类型的话，属于深拷贝】
+数组/对象浅拷贝【如果里面的元素是基本类型的话,属于深拷贝】
 
 ```js
 arr.slice()
@@ -13,7 +13,7 @@ Object.assign(arr1, arr)  //  也可用于对象
 const a2 = [...a1]  //  等同于 arr.slice()
 ```
 
-常见的深拷贝方式有：
+常见的深拷贝方式有:
 
 - _.cloneDeep(): lodash 库方法
 ```js
@@ -35,7 +35,7 @@ console.log(obj1.b.f === obj2.b.f); // false
 - JSON.stringify()
 ```js
 const obj2=JSON.parse(JSON.stringify(obj1));
-//  但是这种方式存在弊端，会忽略undefined、symbol和函数
+//  但是这种方式存在弊端,会忽略undefined symbol和函数
 ```
 
 如何实现一个对象或者数组的浅拷贝
@@ -43,7 +43,7 @@ const obj2=JSON.parse(JSON.stringify(obj1));
 var shallowCopy = function (target) {
   if (typeof target !== 'object') return 
   const result = Array.isArray(target) ? [] : {}
-  //  遍历target属性，in 方法会遍历，不仅遍历对象自身属性，还会遍历继承的inumerable 属性
+  //  遍历target属性,in 方法会遍历,不仅遍历对象自身属性,还会遍历继承的inumerable 属性
   for (ele in target) {
     //  判断是target自身的属性才拷贝
     if (target.hasOwnProperty(ele)) {
@@ -60,7 +60,7 @@ var shallowCopy = function (target) {
 var deepCopy = function (target) {
   if (typeof target !== 'object') return 
   const result = Array.isArray(target) ? [] : {}
-  //  遍历target属性，in 方法会遍历，不仅遍历对象自身属性，还会遍历继承的inumerable 属性
+  //  遍历target属性,in 方法会遍历,不仅遍历对象自身属性,还会遍历继承的inumerable 属性
   for (ele in target) {
     //  判断是target自身的属性才拷贝
     if (target.hasOwnProperty(ele)) {
@@ -70,7 +70,7 @@ var deepCopy = function (target) {
 
   return result
 }
-//  问题：值为null会赋值一个空对象
+//  问题:值为null会赋值一个空对象
 ```
 
 ```js
@@ -125,7 +125,7 @@ function deepCopy(obj, map = new WeakMap()) {
   map.set(obj, cloneObj)
   //  会把原型链上的属性都遍历！！！！！
   for (let prop in obj) {
-    //  过滤，仅复制自身属性！！！！！！！！
+    //  过滤,仅复制自身属性！！！！！！！！
     if (obj.hasOwnProperty(prop)) {
       cloneObj[prop] = deepCopy(obj[prop])
     }
@@ -139,17 +139,17 @@ function deepCopy(obj, map = new WeakMap()) {
 补充知识点: 
 ```js
 Set [Set类似于集合]
-成员唯一、无序且不重复de 存储任何类型
-[value, value]，键值与键名是一致的（或者说只有键值，没有键名）
-可以遍历，方法有：add、delete、has
+成员唯一 无序且不重复de 存储任何类型
+[value, value], 键值与键名是一致的（或者说只有键值,没有键名）
+可以遍历,方法有:add delete has
 - new Set([1, 2, 3, 4])
 - 使用 Array.from 将 Set 对象转换为数组对象 const myArr = Array.from(mySet1); 
 - [...mySet] // 将 Set 对象转换为数组
 
 WeakSet
 成员都是对象
-成员都是弱引用，可以被垃圾回收机制回收，可以用来保存DOM节点，不容易造成内存泄漏
-不能遍历，方法有add、delete、has
+成员都是弱引用,可以被垃圾回收机制回收,可以用来保存DOM节点,不容易造成内存泄漏
+不能遍历,方法有add delete has
 const ws = new WeakSet();
 const foo = {};
 const bar = {};
@@ -162,7 +162,7 @@ ws.has(bar); // true
 
 Map [Map 是一种叫做字典的数据结构] key-value
 本质上是键值对的集合
-可以遍历，方法很多可以跟各种数据格式转换
+可以遍历,方法很多可以跟各种数据格式转换
 const myMap = new Map();
 
 const keyString = "a string";
@@ -174,9 +174,9 @@ myMap.set(keyString, "和键'a string'关联的值");
 myMap.set(keyObj, "和键 keyObj 关联的值");
 
 WeakMap
-只接受对象作为键名（null除外），不接受其他类型的值作为键名
-键名是弱引用，键值可以是任意的，键名所指向的对象可以被垃圾回收，此时键名是无效的
-不能遍历，方法有get、set、has、delete
+只接受对象作为键名（null除外）,不接受其他类型的值作为键名
+键名是弱引用,键值可以是任意的,键名所指向的对象可以被垃圾回收,此时键名是无效的
+不能遍历,方法有get set has delete
 
 const wm1 = new WeakMap();
 const wm2 = new WeakMap();
