--- a/dataStructure/复杂度分析.md
+++ b/dataStructure/复杂度分析.md
@@ -1,6 +1,46 @@
 ## 效率评估
+在能够解决问题的前提下，算法效率已成为衡量算法优劣的主要评价指标，它包括以下两个维度。
+
+- 时间效率：算法运行速度的快慢。
+- 空间效率：算法占用内存空间的大小。
+
+简而言之，我们的目标是设计“既快又省”的数据结构与算法。
+
 
 ## 迭代 & 递归
+
+### 迭代
+「迭代 iteration」是一种重复执行某个任务的控制结构。在迭代中，程序会在满足一定的条件下重复执行某段代码，直到这个条件不再满足。
+
+- for 循环是最常见的迭代形式之一，适合在预先知道迭代次数时使用。
+- 在 while 循环中，程序每轮都会先检查条件，如果条件为真，则继续执行，否则就结束循环。
+
+while 循环比 for 循环的自由度更高。在 while 循环中，我们可以自由地设计条件变量的初始化和更新步骤。
+
+总的来说，for 循环的代码更加紧凑，while 循环更加灵活
+
+
+### 递归
+
+「递归 recursion」是一种算法策略，通过函数调用自身来解决问题。它主要包含两个阶段。
+
+递：程序不断深入地调用自身，通常传入更小或更简化的参数，直到达到“终止条件”。
+归：触发“终止条件”后，程序从最深层的递归函数开始逐层返回，汇聚每一层的结果。
+
+而从实现的角度看，递归代码主要包含三个要素。
+
+- 终止条件：用于决定什么时候由“递”转“归”。
+- 递归调用：对应“递”，函数调用自身，通常输入更小或更简化的参数。
+- 返回结果：对应“归”，将当前递归层级的结果返回至上一层。
+
+```js
+//  观察以下代码，我们只需调用函数 recur(n) ，就可以完成的计算
+function recur(n) {
+  if (n === 1) return 1
+  let result = recur(n-1)
+  return n + result
+}
+```
 
 ## 时间复杂度
 
