feat: 奇数偶数前后-补充

--- a/dataStructure/数组/调整数组顺序使奇数位于偶数前面.md
+++ b/dataStructure/数组/调整数组顺序使奇数位于偶数前面.md
@@ -27,7 +27,7 @@ function orderArray(arr) {
     }
 
     if (start < end) {
-      [array[start], array[end]] = [array[end], array[start]]
+      [arr[start], arr[end]] = [arr[end], arr[start]]
     }
 
   }
@@ -38,3 +38,28 @@ function orderArray(arr) {
 
 > 若需要保证相对顺序不变，则不能用上面的写法，需要让两个指针同时从左侧开始
 
+```js
+function reOrder(arr) {
+  if (arr.length === 1) return
+  let start = 0
+  let end = 0
+  const length = arr.length
+
+  while(end < length - 1) {
+    while(arr[start] % 2 === 1) {
+      start += 1
+    } 
+    end = start + 1
+
+    while (end <= length - 1  && arr[end] % 2 === 0) {
+      end += 1
+    }
+
+    if (end <= length - 1 ) {
+      [arr[start], arr[end]] = [arr[end], arr[start]]
+    }
+  }
+
+  return arr
+}
+```
