--- a/dataStructure/数组.md
+++ b/dataStructure/数组.md
@@ -13,6 +13,7 @@ ES6 的新增了 ArrayBuffer ，它可以创建内存空间连续的数组。显
 > 上面链表中提到的一类题目，主要是利用两个或多个不同位置的指针，通过速度和方向的变换解决问题。注意这种技巧经常在排序数组中使用。
 
 - [调整数组顺序使奇数位于偶数前面](./数组/调整数组顺序使奇数位于偶数前面.md)
+- [和为S的两个数字](./数组/和为S的两个数字.md)
 
 ### N数之和问题
 
