feat: - [和为S的连续正整数序列]

--- a/dataStructure/数组.md
+++ b/dataStructure/数组.md
@@ -14,6 +14,7 @@ ES6 的新增了 ArrayBuffer ，它可以创建内存空间连续的数组。显
 
 - [调整数组顺序使奇数位于偶数前面](./数组/调整数组顺序使奇数位于偶数前面.md)
 - [和为S的两个数字](./数组/和为S的两个数字.md)
+- [和为S的连续正整数序列](./数组/和为S的连续正整数序列.md)
 
 ### N数之和问题
 
