feat: init category

--- a/dataStructure/数组.md
+++ b/dataStructure/数组.md
@@ -20,10 +20,10 @@ ES6 的新增了 ArrayBuffer ，它可以创建内存空间连续的数组。显
 
 > 非常常见的问题，基本上都是一个套路，主要考虑如何比暴利法降低时间复杂度，而且也会用到上面的双指针技巧
 
-- 两数之和
-- 三数之和
-- 四数之和
-- N数之和
+- [两数之和](./数组/两数之和)
+- [三数之和](./数组/三数之和)
+- [四数之和](./数组/四数之和)
+- [N数之和](./数组/N数之和)
 
 ### 二维数组
 
