--- a/dataStructure/数组/三数之和.md
+++ b/dataStructure/数组/三数之和.md
@@ -18,6 +18,11 @@
 ```
 
 ## 思路
+1. 排序数组
+2. 遍历数组，index = i, 考虑绕过相同的值
+3. 取start = i+1, end = len - 1
+4. while 循环 sum = 0
+5. 注意考虑找到一组后，start++, end--，且考虑重复的情况
 
 ```js
 function threeSum(arr) {
