feat: 顺时针打印矩阵-补充

--- a/dataStructure/数组/顺时针打印矩阵.md
+++ b/dataStructure/数组/顺时针打印矩阵.md
@@ -1,4 +1,4 @@
-## 题目 - TBD
+## 题目
 
 输入一个矩阵，按照从外向里以顺时针的顺序依次打印出每一个数字。
 
@@ -61,21 +61,25 @@ function printMatrix(matrix) {
 
 // 打印一圈
 function printCircle(matrix, start, coloums, rows, result) {
-  //  ?
-  var entX = coloums - start - 1;
-  //  ?
+  //  表示当前圈的打印的最大的列坐标，即当前圈从左到右的最后一列
+  var endX = coloums - start - 1;
+  //  表示当前圈的打印的最大的行坐标，即当前圈从上到下的最后一行
   var endY = rows - start - 1;
-  for (var i = start; i <= entX; i++) {
+  //  肯定有从左到右的打印
+  for (var i = start; i <= endX; i++) {
     result.push(matrix[start][i]);
   }
+  //  最大行坐标 大于 start, 意味着有从上到下的打印
   if (endY > start) {
     for (var i = start + 1; i <= endY; i++) {
-      result.push(matrix[i][entX]);
+      result.push(matrix[i][endX]);
     }
-    if (entX > start) {
-      for (var i = entX - 1; i >= start; i--) {
+    //  最大列坐标 大于 start， 意味着有从右到左的打印
+    if (endX > start) {
+      for (var i = endX - 1; i >= start; i--) {
         result.push(matrix[endY][i]);
       }
+      //  最大行坐标 大于 start + 1, 意味着有从下到上的打印
       if (endY > start + 1) {
         for (var i = endY - 1; i > start; i--) {
           result.push(matrix[i][start]);
