feat: 连续子数组的最大和

--- a/dataStructure/数组.md
+++ b/dataStructure/数组.md
@@ -38,6 +38,6 @@ ES6 的新增了 ArrayBuffer ，它可以创建内存空间连续的数组。显
 > 数组少不了的就是统计和计算，此类问题考察如何用更高效的方法对数组进行统计计算。
 
 - [数组中出现次数超过数组长度一半的数字](./数组/数组中出现次数超过数组长度一半的数字.md)
-- [连续子数组的最大和](opens new window)
+- [连续子数组的最大和](./数组/连续子数组的最大和.md)
 - [扑克牌顺子](opens new window)
 - [第一个只出现一次的字符]
