feat: update format

--- a/dataStructure/数组/连续子数组的最大和.md
+++ b/dataStructure/数组/连续子数组的最大和.md
@@ -6,16 +6,11 @@
 
 ## 思路
 
-记录当前连续子数组最大值`max`默认值为数组第一项
-
-记录当前连续子数组累加值`sum`默认值为数组第一项
-
-从第二项开始，若 `sum < 0` 当前的sum 不再对后面有贡献，令 sum = 当前数
-
-若 sum > 0 则 sum = sum + 当前数
-
-若 sum > max 则 令 max = sum
-
+- 记录当前连续子数组最大值`max`默认值为数组第一项
+- 记录当前连续子数组累加值`sum`默认值为数组第一项
+- 从第二项开始，若 `sum < 0` 当前的sum 不再对后面有贡献，令 sum = 当前数
+- 若 sum > 0 则 sum = sum + 当前数
+- 若 sum > max 则 令 max = sum
 
 
 ```js
