--- a/dataStructure/数组/四数之和.md
+++ b/dataStructure/数组/四数之和.md
@@ -18,9 +18,8 @@
 
 ## 思路
 
-到这里其实我们就能发现一些规律，我们可以像`三数之和`那样，我们可以通过`大小指针`来逼近结果，从而达到降低一层时间复杂度的效果。
-
-不管是几数之和，我们都用这种方法来进行优化。
+- 到这里其实我们就能发现一些规律，我们可以像`三数之和`那样，我们可以通过`大小指针`来逼近结果，从而达到降低一层时间复杂度的效果。
+- 不管是几数之和，我们都用这种方法来进行优化。
 
 ```js
 function fourSum(arr) {
