feat: 希尔排序&插入

--- a/algorithm/排序/插入排序.md
+++ b/algorithm/排序/插入排序.md
@@ -1,7 +1,3 @@
-## 题目
-
-插入排序
-
 ## 思路
 
 1. 将左侧序列看成一个有序序列，每次将一个数字插入该有序序列。
@@ -23,6 +19,28 @@ function insert(arr) {
           break
         }
       }
+    }
+
+    return arr
+  }
+
+  return []
+}
+
+function insert(arr) {
+  if (Array.isArray(arr)) {
+    let preIndex
+    let current
+    for (let i=1; i<arr.length; i++) {
+      preIndex = i - 1
+      current = arr[i]
+
+      while(preIndex > 0 && arr[preIndex] > current) {
+        arr[preIndex+1] = arr[preIndex]
+        preIndex--
+      }
+
+      arr[preIndex+1] = current
     }
 
     return arr
