--- a/algorithm/排序/插入排序.md
+++ b/algorithm/排序/插入排序.md
@@ -34,12 +34,12 @@ function insert(arr) {
     for (let i=1; i<arr.length; i++) {
       preIndex = i - 1
       current = arr[i]
-
+      //  该条件想清楚
       while(preIndex > 0 && arr[preIndex] > current) {
         arr[preIndex+1] = arr[preIndex]
         preIndex--
       }
-
+      //  注意！！！！⚠️
       arr[preIndex+1] = current
     }
 
