--- a/algorithm/排序/选择排序.md
+++ b/algorithm/排序/选择排序.md
@@ -8,9 +8,11 @@
 function select(arr) {
   if (Array.isArray(arr)) {
     for (let i=0; i< arr.length - 1; i++) {
+
       let min = i
       for (let j=i+1; j<arr.length; j++) {
         if (arr[j] < arr[min]) {
+          //  记录序号即可，不需要交换
           min = j
         }
       }
