--- a/algorithm/排序/归并排序.md
+++ b/algorithm/排序/归并排序.md
@@ -14,7 +14,9 @@
 
 若左右数组有一个为空，那么此时另一个数组一定大于`temp`中的所有元素，直接将其所有元素加入`temp`
 
-写法1: 分割数组时直接将数组分割为两个数组，合并时直接合并数组。
+### 写法1
+
+分割数组时直接将数组分割为两个数组，合并时直接合并数组。
 
 优点：思路简单，写法简单
 
@@ -26,6 +28,7 @@ function mergeSort(arr) {
   }
   //  负责分割数组
   const mid = Math.floor(arr.length / 2)
+  //  左闭右开
   const left = arr.slice(0, mid)
   const right = arr.slice(mid)
 
@@ -59,4 +62,3 @@ function merge(left, right) {
 稳定
 
 ```
-
