feat: 把数组排成最小的数

--- a/algorithm/排序/快速排序.md
+++ b/algorithm/排序/快速排序.md
@@ -10,6 +10,8 @@
 function quick(arr) {
   if (Array.isArray(arr)) {
     const len = arr.length
+    //  重要的终止条件
+    if (len < 2) return arr
     const pivotIndex = Math.floor(len / 2)
     let pivot = arr.splice(pivotIndex, 1)
     
@@ -24,7 +26,7 @@ function quick(arr) {
       }
     }
 
-    return quick(left).concat([pivot], quick(right))
+    return quick(left).concat(pivot, quick(right))
 
   }
 
