--- a/dataStructure/数组.md
+++ b/dataStructure/数组.md
@@ -8,6 +8,8 @@ ES6 的新增了 ArrayBuffer ，它可以创建内存空间连续的数组。显
 
 ![Alt text](../images/image-5.png)
 
+!!!! sort reverse splice 会改变原来的数组
+
 ### 双指针
 
 > 上面链表中提到的一类题目，主要是利用两个或多个不同位置的指针，通过速度和方向的变换解决问题。注意这种技巧经常在排序数组中使用。
