--- a/dataStructure/数组/三数之和.md
+++ b/dataStructure/数组/三数之和.md
@@ -33,6 +33,8 @@ function threeSum(arr) {
     arr.sort((a, b) => a - b)
 
     for(let i = 0; i < length; i++) {
+      //  排序之后，如果第一个数为正数，则三数之和不可能为0，所以直接停止循环
+      if(nums[i]>0) break;
       //  若前后两个数相等，则继续
       if (i && arr[i-1] === arr[i]) continue
 
