feat: LRU & set & map

--- a/js/浅拷贝-深拷贝.md
+++ b/js/浅拷贝-深拷贝.md
@@ -141,7 +141,7 @@ function deepCopy(obj, map = new WeakMap()) {
 Set [Set类似于集合]
 成员唯一 无序且不重复de 存储任何类型
 [value, value], 键值与键名是一致的（或者说只有键值,没有键名）
-可以遍历,方法有:add delete has
+可以遍历, 方法有:add delete has; keys() values() 返回值一致，更加印证了上面的话；entries 返回[key, values] key = values
 - new Set([1, 2, 3, 4])
 - 使用 Array.from 将 Set 对象转换为数组对象 const myArr = Array.from(mySet1); 
 - [...mySet] // 将 Set 对象转换为数组
@@ -161,8 +161,11 @@ ws.has(foo); // true
 ws.has(bar); // true
 
 Map [Map 是一种叫做字典的数据结构] key-value
-本质上是键值对的集合
-可以遍历,方法很多可以跟各种数据格式转换
+对象保存键值对，并且能够*记住键的原始插入顺序*。任何值（对象或者原始值）都可以作为键或值。
+可以遍历,方法很多可以跟各种数据格式转换 方法有: delete has get set
+
+new Map([[1,2], [3,4]])
+
 const myMap = new Map();
 
 const keyString = "a string";
