--- a/dataStructure/字符串/翻转单词顺序.md
+++ b/dataStructure/字符串/翻转单词顺序.md
@@ -118,5 +118,18 @@ parseInt("0x10")      // 输出结果：16
 parseInt("50", 1)      // 输出结果：NaN
 parseInt("50", 40)     // 输出结果：NaN
 
+parseInt("10 okokwe") //  10
+parseInt("okokwe 10")   //  输出结果：NaN
+
+parseInt(string, radix);
+string
+要被解析的值。如果参数不是一个字符串，则将其转换为字符串 (使用 ToString抽象操作)。字符串开头的空白符将会被忽略。
+
+radix_ 可选_
+从 2 到 36 的整数，表示进制的基数。;
+
+返回 NaN
+- radix 小于 2 或大于 36，或
+- 第一个非空格字符不能转换为数字。
 
 ```
