--- a/dataStructure/数组.md
+++ b/dataStructure/数组.md
@@ -43,3 +43,15 @@ ES6 的新增了 ArrayBuffer ，它可以创建内存空间连续的数组。显
 - [连续子数组的最大和](./数组/连续子数组的最大和.md)
 - [扑克牌顺子](./数组/扑克牌顺子.md)
 - [第一个只出现一次的字符](./数组/第一个只出现一次的字符.md)
+
+
+### 其他
+
+- [把数组排成最小的数](./数组/把数组排成最小的数.md)
+- [数组中的逆序对](./数组/数组中的逆序对.md)
+- [在排序数组中查找数字](./数组/在排序数组中查找数字.md)
+- [ali:编写一个函数计算多个数组的交集](./数组/ali:编写一个函数计算多个数组的交集.md)
+- [leetcode88：合并两个有序数组](./数组/leetcode88：合并两个有序数组.md)
+- [leetcode146：LRU缓存](./数组/leetcode146：LRU缓存.md)
+- [leetcode349：两个数组的交集](./数组/leetcode349：两个数组的交集.md)
+- [tx:数组扁平化、去重、排序](./数组/tx:数组扁平化、去重、排序.md)
