feat: add string func

--- a/dataStructure/字符串.md
+++ b/dataStructure/字符串.md
@@ -1,5 +1,7 @@
 ## others
 
+![Alt text](../images/字符串方法.png)
+
 - [百度：判断回文字符串](./字符串/百度：判断回文字符串.md)
 - [表示数值的字符串](./字符串/表示数值的字符串.md)
 - [翻转单词顺序](./字符串/翻转单词顺序.md)
