--- a/dataStructure/字符串.md
+++ b/dataStructure/字符串.md
@@ -2,6 +2,8 @@
 
 ![Alt text](../images/字符串方法.png)
 
+注意⚠️: substr 方法弃用
+
 - [百度：判断回文字符串](./字符串/百度：判断回文字符串.md)
 - [表示数值的字符串](./字符串/表示数值的字符串.md)
 - [翻转单词顺序](./字符串/翻转单词顺序.md)
