feat: 包含min函数的栈

--- a/dataStructure/栈和队列.md
+++ b/dataStructure/栈和队列.md
@@ -1,8 +1,8 @@
 
 在上面的数组中，我们可以通过索引随机访问元素，但是在某些情况下，我们可能要限制数据的访问顺序，于是有了两种限制访问顺序的数据结构：栈（先进后出）、队列（先进先出）
 
-- [队列和栈的互相实现]()
-- [包含min函数的栈]()
-- [栈的压入弹出序列]()
-- [滑动窗口最大值]()
-- [接雨水]()
+- [队列和栈的互相实现](./栈和队列/用两个栈实现队列.md)
+- [包含min函数的栈](./栈和队列/包含min函数的栈.md)
+- [栈的压入弹出序列](./栈和队列/栈的压入弹出序列.md)
+- [滑动窗口最大值](./栈和队列/滑动窗口最大值.md)
+- [接雨水](https://leetcode.cn/problems/trapping-rain-water/)
