feat: 环形链表 &  入环的第一个节点

--- a/dataStructure/链表.md
+++ b/dataStructure/链表.md
@@ -15,7 +15,7 @@
 ## 环类题目
 > 环类题目即从判断一个单链表是否存在循环而扩展衍生的问题
 
-- [环形链表]()
+- [环形链表](/dataStructure/链表/环形链表.md)
 - [链表环的入口节点]()
 - [约瑟夫环]()
 
@@ -26,8 +26,26 @@
 两个指针以不同速度移动：一个指针快一些，另一个指针慢一些。
 对于单链表，因为我们只能在一个方向上遍历链表，所以第一种情景可能无法工作。然而，第二种情景，也被称为`慢指针和快指针技巧`，是非常有用的。
 
+```
+这正是我们在链表中使用两个速度不同的指针时会遇到的情况：
+
+- 如果没有环，快指针将停在链表的末尾。
+- 如果有环，快指针最终将与慢指针相遇。
+
+所以剩下的问题是：
+这两个指针的适当速度应该是多少？
+
+一个安全的选择是每次移动慢指针一步，而移动快指针两步。每一次迭代，快速指针将额外移动一步。如果环的长度为 M，经过 M 次迭代后，快指针肯定会多绕环一周，并赶上慢指针。
+
+```
+
+
 - [两个链表的公共节点](./链表/两个链表的公共节点.md)
 - [链表倒数第k个节点]()
 - [相交链表]()
 
-### 其他
+### 双向链表
+
+双链还有一个引用字段，称为prev字段。有了这个额外的字段，您就能够知道当前结点的前一个结点。
+
+- [扁平化多级双向链表](./链表/扁平化多级双向链表.md)
