--- a/dataStructure/链表/删除链表中的节点.md
+++ b/dataStructure/链表/删除链表中的节点.md
@@ -20,9 +20,11 @@ var deleteNode = function (head, node) {
   if (node.next) {
     node.val = node.next.val
     node.next = node.next.next
+    //  删除的节点是头节点&尾节点
   } else if (node === head) {
     node = null
     head = null
+    //  删除的节点是尾节点且不是头节点
   } else {
     node = head 
     while(node.next.next) {
