--- a/dataStructure/链表/两个链表的公共节点.md
+++ b/dataStructure/链表/两个链表的公共节点.md
@@ -10,7 +10,7 @@
 
 时间复杂度O(length1+length2) 空间复杂度O(0)
 
-![Alt text](image.png)
+![Alt text](/images/两个链表的公共节点.png)
 
 ```js
 function FindFirstCommonNode(pHead1, pHead2) {
