--- a/dataStructure/链表.md
+++ b/dataStructure/链表.md
@@ -16,8 +16,8 @@
 > 环类题目即从判断一个单链表是否存在循环而扩展衍生的问题
 
 - [环形链表](/dataStructure/链表/环形链表.md)
-- [链表环的入口节点]()
-- [约瑟夫环]()
+- [链表环的入口节点](./链表/入环的第一个节点.md)
+- [约瑟夫环](./链表/约瑟夫环.md)
 
 ## 双指针
 > 双指针的思想在链表和数组中的题目都经常会用到，主要是利用两个或多个不同位置的指针，通过速度和方向的变换解决问题。
@@ -41,11 +41,17 @@
 
 
 - [两个链表的公共节点](./链表/两个链表的公共节点.md)
-- [链表倒数第k个节点]()
-- [相交链表]()
+- [删除链表的倒数第N个节点](./链表/删除链表的倒数第N个节点.md)
+- [相交链表](./链表/相交链表.md)
 
 ### 双向链表
 
 双链还有一个引用字段，称为prev字段。有了这个额外的字段，您就能够知道当前结点的前一个结点。
 
 - [扁平化多级双向链表](./链表/扁平化多级双向链表.md)
+
+
+tip:
+
+- 如果你需要经常添加或删除结点，链表可能是一个不错的选择。
+- 如果你需要经常按索引访问元素，数组可能是比链表更好的选择。
