--- a/dataStructure/链表/两个链表的公共节点.md
+++ b/dataStructure/链表/两个链表的公共节点.md
@@ -13,39 +13,28 @@
 ![Alt text](/images/两个链表的公共节点.png)
 
 ```js
-function FindFirstCommonNode(pHead1, pHead2) {
-  if (!pHead1 || !pHead2) return null
-  //  获取链表长度
-  let len1 = getLength(pHead1)
-    len2 = getLength(pHead2)
-  //  较长，较短链表，长度差值
-  let long, short, interval
 
-  if (len1 > len2) {
-    long = pHead1
-    short = pHead2
-    interval = len1 - len2
-  } else {
-    long = pHead2
-    short = pHead1
-    interval = len2 - len1
-  }
-  //  长链表先行
-  while(interval--) {
-    long = long.next
-  }
-  //  注意终止条件，为长的链表末尾，因为有可能长链表最后和短链表最后相接
-  while(long){
-    if (long === short) {
-      return long
+function FindFirstCommonNode(pHead1, pHead2) {
+  //  得到两个链表的长度
+  let len1 = getLength(pHead1)
+  let len2 = getLength(pHead2)
+  //  如果长度不一致，长的链表需要先行
+  while(len1 !== len2) {
+    if (len1 > len2) {
+      pHead1 = pHead1.next
+      len1-- 
     } else {
-      long = long.next
-      short = short.next
+      pHead2 = pHead2.next
+      len2-- 
     }
   }
-
-  return null
-
+  //  长度一致后，进行同步调往后走
+  while(pHead1 != pHead2 && pHead1 && pHead2) {
+    pHead1 = pHead1.next
+    pHead2 = pHead2.next
+  }
+  //  要么null 要么就是相等的节点
+  return pHead1
 }
 
 function getLength(head) {
