feat: 扁平化多级双向链表

--- a/dataStructure/链表.md
+++ b/dataStructure/链表.md
@@ -51,6 +51,12 @@
 - [扁平化多级双向链表](./链表/扁平化多级双向链表.md)
 
 
+
+### others
+- [合并两个有序链表](./链表/合并两个有序链表.md)
+- [两数相加](./链表/两数相加.md)
+
+
 tip:
 
 - 如果你需要经常添加或删除结点，链表可能是一个不错的选择。
