--- a/dataStructure/链表.md
+++ b/dataStructure/链表.md
@@ -15,7 +15,7 @@
 ## 环类题目
 > 环类题目即从判断一个单链表是否存在循环而扩展衍生的问题
 
-- [环形链表](/dataStructure/链表/环形链表.md)
+- [环形链表](./链表/环形链表.md)
 - [链表环的入口节点](./链表/入环的第一个节点.md)
 - [约瑟夫环](./链表/约瑟夫环.md)
 
