feat: 旋转链表 update

--- a/dataStructure/链表/旋转链表.md
+++ b/dataStructure/链表/旋转链表.md
@@ -10,18 +10,18 @@ https://leetcode.cn/leetbook/read/linked-list/f00a2/
 输出：[2,0,1]
 ```
 
-一条蛇咬着蛇尾，然后中间砍一刀变成了一条新的蛇
+`一条蛇咬着蛇尾，然后中间砍一刀变成了一条新的蛇`
 
-具体代码中，我们首先计算出链表的长度 n，并找到该链表的末尾节点，将其与头节点相连。这样就得到了闭合为环的链表。然后我们找到新链表的最后一个节点（即原链表的第 (n−1)−(k mod n) 个节点），将当前闭合为环的链表断开，即可得到我们所需要的结果。
+具体代码中，我们首先计算出链表的长度 n，并找到该链表的末尾节点，将其与头节点相连。这样就得到了闭合为环的链表。然后我们找到新链表的最后一个节点（即原链表的第 n − (k mod n) 个节点），将当前闭合为环的链表断开，即可得到我们所需要的结果。
 
 特别地，当链表长度不大于 1，或者 k 为 n 的倍数时，新链表将与原链表相同，我们无需进行任何处理。
 
-TBD
 ```js
 var rotateRight = function(head, k) {
     if (k === 0 || !head || !head.next) {
         return head;
     }
+    //  记录链表长度
     let n = 1;
     let cur = head;
     //  获得长度和最后一个节点
@@ -29,7 +29,7 @@ var rotateRight = function(head, k) {
         cur = cur.next;
         n++;
     }
-
+    //  获得新链表的最后一个节点
     let add = n - k % n;
     if (add === n) {
         return head;
