--- a/dataStructure/链表.md
+++ b/dataStructure/链表.md
@@ -9,13 +9,13 @@
 
 - [从尾到头打印链表](./链表/从尾到头打印链表.md)
 - [删除链表中的节点](./链表/删除链表中的节点.md)
-- [反转链表](./链表/反转链表.md)
+- [反转链表](./链表/leetcode206-反转链表.md)
 - [复杂链表的复制](./链表/复杂链表的复制.md)
 
 ## 环类题目
 > 环类题目即从判断一个单链表是否存在循环而扩展衍生的问题
 
-- [环形链表](./链表/环形链表.md)
+- [环形链表](./链表/leetcode141+有赞-环形链表.md)
 - [链表环的入口节点](./链表/入环的第一个节点.md)
 - [约瑟夫环](./链表/约瑟夫环.md)
 
@@ -53,7 +53,7 @@
 
 
 ### others
-- [合并两个有序链表](./链表/合并两个有序链表.md)
+- [合并两个有序链表](./链表/leetcode21-合并两个有序链表.md)
 - [两数相加](./链表/两数相加.md)
 - [旋转链表](./链表/旋转链表.md)
 
