--- a/dataStructure/链表.md
+++ b/dataStructure/链表.md
@@ -41,8 +41,8 @@
 
 
 - [两个链表的公共节点](./链表/两个链表的公共节点.md)
-- [删除链表的倒数第N个节点](./链表/删除链表的倒数第N个节点.md)
-- [相交链表](./链表/相交链表.md)
+- [删除链表的倒数第N个节点](./链表/leetcode19-删除链表的倒数第N个节点.md)
+- [相交链表](./链表/leetcode160-相交链表.md)
 
 ### 双向链表
 
@@ -56,7 +56,7 @@
 - [合并两个有序链表](./链表/leetcode21-合并两个有序链表.md)
 - [两数相加](./链表/两数相加.md)
 - [旋转链表](./链表/旋转链表.md)
-
+- [leetcode876-链表的中间结点](./链表/leetcode876-链表的中间结点.md)
 
 tip:
 
