--- a/dataStructure/链表.md
+++ b/dataStructure/链表.md
@@ -9,13 +9,13 @@
 
 - [从尾到头打印链表](./链表/从尾到头打印链表.md)
 - [删除链表中的节点](./链表/删除链表中的节点.md)
-- [反转链表](./链表/leetcode206-反转链表.md)
+- [leetcode206-反转链表](./链表/leetcode206-反转链表.md)
 - [复杂链表的复制](./链表/复杂链表的复制.md)
 
 ## 环类题目
 > 环类题目即从判断一个单链表是否存在循环而扩展衍生的问题
 
-- [环形链表](./链表/leetcode141+有赞-环形链表.md)
+- [leetcode141-环形链表](./链表/leetcode141+有赞-环形链表.md)
 - [链表环的入口节点](./链表/入环的第一个节点.md)
 - [约瑟夫环](./链表/约瑟夫环.md)
 
@@ -41,8 +41,8 @@
 
 
 - [两个链表的公共节点](./链表/两个链表的公共节点.md)
-- [删除链表的倒数第N个节点](./链表/leetcode19-删除链表的倒数第N个节点.md)
-- [相交链表](./链表/leetcode160-相交链表.md)
+- [leetcode19-删除链表的倒数第N个节点](./链表/leetcode19-删除链表的倒数第N个节点.md)
+- [leetcode160-相交链表](./链表/leetcode160-相交链表.md)
 
 ### 双向链表
 
@@ -53,10 +53,11 @@
 
 
 ### others
-- [合并两个有序链表](./链表/leetcode21-合并两个有序链表.md)
-- [两数相加](./链表/两数相加.md)
+- [leetcode21-合并两个有序链表](./链表/leetcode21-合并两个有序链表.md)
+- [快手-两数相加](./链表/快手-两数相加.md)
 - [旋转链表](./链表/旋转链表.md)
 - [leetcode876-链表的中间结点](./链表/leetcode876-链表的中间结点.md)
+- [leetcode611+tx-有效三角形的个数](./链表/leetcode611+tx-有效三角形的个数.md)
 
 tip:
 
