--- a/dataStructure/链表/快手-两数相加.md
+++ b/dataStructure/链表/快手-两数相加.md
@@ -6,8 +6,17 @@ https://leetcode.cn/leetbook/read/linked-list/fv6w7/
 
 你可以假设除了数字 0 之外，这两个数都不会以 0 开头。
 
+https://leetcode.cn/problems/sum-lists-lcci/description/
+
 ```js
 //  思路：转换为数组 -> 数值相加，然后转换为数组，再创建Listnode
+/**
+ * Definition for singly-linked list.
+ * function ListNode(val) {
+ *     this.val = val;
+ *     this.next = null;
+ * }
+ */
 var addTwoNumbers = function(l1, l2) {
     let a1 = [], a2 = []
     while (l1) {
@@ -41,6 +50,7 @@ var addTwoNumbers = function(l1, l2) {
 //  直接进行相加，考虑进位
 var addTwoNumbers = function(l1, l2) {
   let preH = new ListNode()
+  //  注意赋值！！！！！！
   let start = preH
   let carry = 0 //  进位
 
@@ -50,9 +60,9 @@ var addTwoNumbers = function(l1, l2) {
 
     let sum = v1 + v2 + carry
     carry = Math.floor(sum / 10)
-
-    current.next = new ListNode(sum % 10)
-    current = current.next
+    //  注意赋值 是 start.next 非 start！！！！！！！
+    start.next = new ListNode(sum % 10)
+    start = start.next
 
     if (l1) l1 = l1.next
     if (l2) l2 = l2.next
