--- a/dataStructure/链表.md
+++ b/dataStructure/链表.md
@@ -51,13 +51,14 @@
 - [扁平化多级双向链表](./链表/扁平化多级双向链表.md)
 
 
-
+s
 ### others
 - [leetcode21-合并两个有序链表](./链表/leetcode21-合并两个有序链表.md)
 - [快手-两数相加](./链表/快手-两数相加.md)
 - [旋转链表](./链表/旋转链表.md)
 - [leetcode876-链表的中间结点](./链表/leetcode876-链表的中间结点.md)
 - [leetcode611+tx-有效三角形的个数](./链表/leetcode611+tx-有效三角形的个数.md)
+- [leetcode42-接雨水问题](./链表/leetcode42-接雨水问题.md)
 
 tip:
 
