--- a/js/浅拷贝-深拷贝.md
+++ b/js/浅拷贝-深拷贝.md
@@ -135,60 +135,5 @@ function deepCopy(obj, map = new WeakMap()) {
 
 }
 ```
-
-补充知识点: 
-```js
-Set [Set类似于集合]
-成员唯一 无序且不重复de 存储任何类型
-[value, value], 键值与键名是一致的（或者说只有键值,没有键名）
-可以遍历, 方法有: add delete has; keys() values() 返回值一致，更加印证了上面的话；entries 返回[key, values] key = values
-- new Set([1, 2, 3, 4])
-- 使用 Array.from 将 Set 对象转换为数组对象 const myArr = Array.from(mySet1); 
-- [...mySet] // 将 Set 对象转换为数组
-
-WeakSet
-成员都是对象
-成员都是弱引用,可以被垃圾回收机制回收,可以用来保存DOM节点,不容易造成内存泄漏
-不能遍历,方法有add delete has
-const ws = new WeakSet();
-const foo = {};
-const bar = {};
-
-ws.add(foo);
-ws.add(bar);
-
-ws.has(foo); // true
-ws.has(bar); // true
-
-Map [Map 是一种叫做字典的数据结构] key-value
-对象保存键值对，并且能够*记住键的原始插入顺序*。任何值（对象或者原始值）都可以作为键或值。
-可以遍历,方法很多可以跟各种数据格式转换 方法有: delete has get set
-
-new Map([[1,2], [3,4]])
-
-const myMap = new Map();
-
-const keyString = "a string";
-const keyObj = {};
-const keyFunc = function () {};
-
-// 添加键
-myMap.set(keyString, "和键'a string'关联的值");
-myMap.set(keyObj, "和键 keyObj 关联的值");
-
-WeakMap
-只接受对象作为键名（null除外）,不接受其他类型的值作为键名
-键名是弱引用,键值可以是任意的,键名所指向的对象可以被垃圾回收,此时键名是无效的
-不能遍历,方法有get set has delete
-
-const wm1 = new WeakMap();
-const wm2 = new WeakMap();
-const wm3 = new WeakMap();
-const o1 = {};
-const o2 = function () {};
-const o3 = window;
-
-wm1.set(o1, 37);
-wm1.set(o2, "azerty");
-```
+补充知识点见: [字典集合](../dataStructure/字典和集合.md)
 
