--- a/dataStructure/字符串.md
+++ b/dataStructure/字符串.md
@@ -15,3 +15,4 @@
 - [leetcode43+腾讯-字符串相乘](./字符串/leetcode43+腾讯-字符串相乘.md)
 - [leetcode151+字节-翻转字符串里的单词](./字符串/leetcode151+字节-翻转字符串里的单词.md)
 - [leetcode415+Facebook+字节-字符串相加](./字符串/leetcode415+Facebook+字节-字符串相加.md)
+- [字符流中第一个不重复的字符](./字符串/字符流中第一个不重复的字符.md)
