--- a/dataStructure/数组/三数之和.md
+++ b/dataStructure/数组/三数之和.md
@@ -54,9 +54,11 @@ function threeSum(arr) {
           //  成功找到一组后，需要推动start / end 序号
           start++
           end--
+          //  跳过相同值
           while(start < end && arr[start] === arr[start-1]) {
             start++
           }
+          //  跳过相同值
           while(start < end && arr[end] === arr[end+1]) {
             end--
           }
@@ -71,4 +73,45 @@ function threeSum(arr) {
 
 //  threeSum([-1, 0, 1, 2, -1, -4])
 
+//  巧用Set
+function threeSum(arr) {
+  // 使用 Set() 即可满足需求, 相对节省内存
+  let set = new Set()
+  let result = []
+  //  从小到大排序
+  arr.sort((a, b) => a - b)
+
+  for (let i=0; i<arr.length-2; i++) {
+    //  跳过重复值
+    while(i && arr[i] === arr[i-1]) i++
+    //  第一个数
+    let first = arr[i]
+    let j = i+1
+
+    while(j<arr.length) {
+      //  第二个数
+      let second = arr[j]
+      //  第三个数 - 转换为两数之和
+      let third = 0 - second - first
+      
+      if (set.has(third)) {
+        result.push([first, second, third])
+
+        set.add(second)
+        j++
+
+        while (arr[j] === arr[j-1]) j++
+
+      } else {
+        set.add(second)
+        j++
+      }
+    } 
+    //  重置
+    set = new Set()
+  }
+
+  return result
+}
 ```
+
