feat: 二叉树遍历update

--- a/dataStructure/二叉树/二叉树的中序遍历.md
+++ b/dataStructure/二叉树/二叉树的中序遍历.md
@@ -25,7 +25,7 @@
 进阶: 递归算法很简单，你可以通过迭代算法完成吗？
 
 ```js
-//  递归实现
+//  递归实现, 两个参数
  var inorderTraversal = function (root, array = []) {
   if (root) {
     inorderTraversal(root.left, array)
@@ -35,6 +35,19 @@
 
   return array
  }
+//  递归实现, 一个参数
+  var inorderTraversal = (root) => {
+    let res = []
+    const inOrder = (node) => {
+      if (!node) return 
+      inOrder(node.left)
+      res.push(node.val)
+      inOrder(node.right)
+    }
+
+    inOrder(root)
+    return res
+  }
 
  // 非递归
 取根节点为目标节点，开始遍历
