feat: 求二叉树的遍历

--- a/dataStructure/字符串/翻转单词顺序.md
+++ b/dataStructure/字符串/翻转单词顺序.md
@@ -72,7 +72,7 @@ str.slice();      // 输出结果："abcdefg"
 str.slice(-2);    // 输出结果："fg" 如果start是负数，则该参数规定的是从字符串的尾部开始算起的位置
 str.slice(6, 1);  // 输出结果：""
 
-string.substr(start,length) //  弃用
+string.substr(start,length) //  弃用!!!!!!!
 
 string.substring(from, to)  //  左闭右开！！
 //  与 slice() 不同的是，如果第二个参数小于第一个参数，则 substring() 方法会自动交换两个参数的位置。！
