--- a/dataStructure/二叉树.md
+++ b/dataStructure/二叉树.md
@@ -2,7 +2,7 @@
 
 > 二叉树是一种典型的树树状结构。如它名字所描述的那样，二叉树是每个节点`最多有两个子树`的树结构，通常子树被称作“左子树”和“右子树”。
 
-### 二叉树遍历
+### 二叉树遍历 - （Binary Tree，BT）
 > 重点中的重点，最好同时掌握`递归和非递归`版本，递归版本很容易书写，但是`真正考察基本功的是非递归版本`。
 
 - [二叉树的中序遍历](./二叉树/二叉树的中序遍历.md)
@@ -19,6 +19,20 @@
 - [对称的二叉树](./二叉树/对称的二叉树.md)
 - [二叉树的镜像](./二叉树/二叉树的镜像.md)
 
-### 二叉树搜索树
+### 二叉树搜索树 - （Binary Search Tree，BST）
+
+> 二叉搜索树，它只允许你在左侧储存比父节点小的值，在右侧储存比父节点大的值。这样的定义对于向树的节点中查找/插入/删除节点非常高效。
+
+BST具有以下特性：
+- 若任意节点的左子树不为空，则左子树上所有结点的值均小于它的根结点的值：这表示在二叉搜索树中，每个节点的左子树中的所有节点的值都要小于该节点的值。
+
+- 若任意节点的右子树不为空，则右子树上所有结点的值均大于它的根结点的值：这表示在二叉搜索树中，每个节点的右子树中的所有节点的值都要大于该节点的值。
+
+- 任意节点的左、右子树也分别为二叉查找树：这表示在二叉搜索树中，每个节点的左子树和右子树都是一个二叉搜索树，也就是说，每个子树都满足上述两个条件。
+
+这些特性使得二叉搜索树具有一定的`有序性`，可以通过对比节点的值来快速定位目标值。通常，二叉搜索树被广泛应用于`数据的查找、插入和删除操作`，因为它们能够以较高效的方式组织和管理数据。
+
+- [二叉搜索树的第k个节点](./二叉树/二叉搜索树的第k个节点.md)
+- [二叉搜索树的后序遍历](./二叉树/二叉搜索树的后序遍历.md)
 
 ### 二叉树的深度
