--- a/dataStructure/二叉树.md
+++ b/dataStructure/二叉树.md
@@ -19,7 +19,7 @@
 - [对称的二叉树](./二叉树/对称的二叉树.md)
 - [二叉树的镜像](./二叉树/二叉树的镜像.md)
 
-### 二叉树搜索树 - （Binary Search Tree，BST）
+### 二叉树搜索树 - （Binary Search Tree，BST）【又叫二叉排序树 / 二叉查找树】 左小右大。
 
 > 二叉搜索树，它只允许你在左侧储存比父节点小的值，在右侧储存比父节点大的值。这样的定义对于向树的节点中查找/插入/删除节点非常高效。
 
@@ -36,3 +36,29 @@ BST具有以下特性：
 - [二叉搜索树的后序遍历](./二叉树/二叉搜索树的后序遍历.md)
 
 ### 二叉树的深度
+
+> 二叉树的深度为根节点到最远叶子节点的最长路径上的节点数。
+
+> 平衡二叉树：左右子树深度之差大于1 [平衡二叉树定义：任意节点的子树的高度差都小于等于 1]
+
+一个姓 AV 的大佬（G. M. Adelson-Velsky） 和一个姓 L 的大佬（ Evgenii Landis）提出「平衡二叉树」（AVL） 。
+
+判断「平衡二叉树」的 2 个条件：
+
+1. 是「二叉排序树」
+2. 任何一个节点的左子树或者右子树都是「平衡二叉树」（左右高度差小于等于 1）
+
+
+平衡因子 BF
+定义：左子树和右子树高度差
+
+计算：左子树高度 - 右子树高度的值
+
+别名：简称 BF（Balance Factor 而不是 Boy Friend）
+
+平衡二叉树要求`平衡因子的绝对值不大于1`，所以该图就是一个标准的平衡二叉树 [不确定的话，可以通过给节点标记BF 的方法来判断]
+![Alt text](image.png)
+
+- [二叉树的最大深度](./二叉树/二叉树的最大深度.md)
+- [二叉树的最小深度](./二叉树/二叉树的最小深度.md)
+- [平衡二叉树](./二叉树/平衡二叉树.md)
