feat: 二叉搜索树双向链表

--- a/dataStructure/二叉树.md
+++ b/dataStructure/二叉树.md
@@ -67,7 +67,7 @@ BST具有以下特性：
 ## 其他
 
 - [二叉树中和为某一值的路径](./二叉树/二叉树中和为某一值的路径.md)
-- [二叉搜索树与双向链表](./二叉树/二叉搜索树与双向链表.md)
+- [二叉搜索树与双向链表](./二叉树/剑指-二叉搜索树与双向链表.md)
 - [序列化二叉树](./二叉树/序列化二叉树.md)
 - [二叉树的下一个节点](./二叉树/二叉树的下一个节点.md)
 - [树的子结构](./二叉树/树的子结构.md)
