feat: 二叉树 finish

--- a/dataStructure/二叉树.md
+++ b/dataStructure/二叉树.md
@@ -71,3 +71,12 @@ BST具有以下特性：
 - [序列化二叉树](./二叉树/序列化二叉树.md)
 - [二叉树的下一个节点](./二叉树/二叉树的下一个节点.md)
 - [树的子结构](./二叉树/树的子结构.md)
+
+
+tip: 一个二叉树，如果每一个层的结点数都达到最大值，则这个二叉树就是`满二叉树`。
+
+在满叉树的基础上，我在最底层从右往左删去若干节点，得到的都是`完全二叉树`。
+
+所以说，满二叉树一定是完全二叉树，但是完全二叉树不一定是满二叉树
+
+平衡二叉树：树的左右子树的高度差不超过1的数，空树也是平衡二叉树的一种。
