--- a/dataStructure/二叉树.md
+++ b/dataStructure/二叉树.md
@@ -11,7 +11,7 @@
 
 
 > 根据前序遍历和中序遍历的特点重建二叉树，逆向思维，很有意思的题目
-- [重建二叉树](./二叉树/重建二叉树.md)
+- [重建二叉树](./二叉树/leetcode-重建二叉树.md)
 - [求二叉树的遍历](./二叉树/求二叉树的遍历.md)
 
 ### 二叉树的对称性
@@ -59,7 +59,7 @@ BST具有以下特性：
 平衡二叉树要求`平衡因子的绝对值不大于1`，所以该图就是一个标准的平衡二叉树 [不确定的话，可以通过给节点标记BF 的方法来判断]
 ![Alt text](image.png)
 
-- [二叉树的最大深度](./二叉树/二叉树的最大深度.md)
+- [二叉树的最大深度](./二叉树/leetcode+tx-二叉树的最大深度.md)
 - [二叉树的最小深度](./二叉树/二叉树的最小深度.md)
 - [平衡二叉树](./二叉树/平衡二叉树.md)
 
