--- a/dataStructure/二叉树.md
+++ b/dataStructure/二叉树.md
@@ -16,7 +16,7 @@
 
 ### 二叉树的对称性
 
-- [对称的二叉树](./二叉树/对称的二叉树.md)
+- [对称的二叉树](./二叉树/leetcode+剑指-对称的二叉树.md)
 - [二叉树的镜像](./二叉树/二叉树的镜像.md)
 
 ### 二叉树搜索树 - （Binary Search Tree，BST）【又叫二叉排序树 / 二叉查找树】 左小右大。
@@ -32,7 +32,7 @@ BST具有以下特性：
 
 这些特性使得二叉搜索树具有一定的`有序性`，可以通过对比节点的值来快速定位目标值。通常，二叉搜索树被广泛应用于`数据的查找、插入和删除操作`，因为它们能够以较高效的方式组织和管理数据。
 
-- [二叉搜索树的第k个节点](./二叉树/二叉搜索树的第k个节点.md)
+- [二叉搜索树的第k个节点](./二叉树/leetcode+tx-二叉搜索树的第k个节点.md)
 - [二叉搜索树的后序遍历](./二叉树/二叉搜索树的后序遍历.md)
 
 ### 二叉树的深度
@@ -66,7 +66,7 @@ BST具有以下特性：
 
 ## 其他
 
-- [二叉树中和为某一值的路径](./二叉树/二叉树中和为某一值的路径.md)
+- [二叉树中和为某一值的路径](./二叉树/leetcode+字节二叉树中和为某一值的路径.md)
 - [二叉搜索树与双向链表](./二叉树/剑指-二叉搜索树与双向链表.md)
 - [序列化二叉树](./二叉树/序列化二叉树.md)
 - [二叉树的下一个节点](./二叉树/二叉树的下一个节点.md)
