feat: 二叉树 finish

--- a/dataStructure/二叉树.md
+++ b/dataStructure/二叉树.md
@@ -71,7 +71,9 @@ BST具有以下特性：
 - [序列化二叉树](./二叉树/序列化二叉树.md)
 - [二叉树的下一个节点](./二叉树/二叉树的下一个节点.md)
 - [树的子结构](./二叉树/树的子结构.md)
-
+- [翻转二叉树](./二叉树/leetcode-翻转二叉树.md)
+- [两个指定节点间的最短距离](./二叉树/字节-两个指定节点间的最短距离.md)
+- [二叉树的最近公共祖先](./二叉树/leetcode-二叉树的最近公共祖先.md)
 
 tip: 一个二叉树，如果每一个层的结点数都达到最大值，则这个二叉树就是`满二叉树`。
 
