--- a/dataStructure/复杂度分析.md
+++ b/dataStructure/复杂度分析.md
@@ -121,7 +121,7 @@ function logarithmic(n) {
 “最差时间复杂度”对应函数渐近上界，使用大记号$O$表示。
 相比之下，平均时间复杂度可以体现算法在随机输入数据下的运行效率，用 $\Theta$ 记号来表示。
 
-
+O(1) < O(log n) < O(n) < O(n log n) < O(n^2) < O(2^n) < O(n!)
 
 ## 空间复杂度
 
