--- a/dataStructure/堆.md
+++ b/dataStructure/堆.md
@@ -16,3 +16,4 @@
 - [堆的基本操作](./堆/堆的基本操作)
 - [数据流中的中位数](./堆/数据流中的中位数)
 - [最小的k个数](./堆/leetcode+tx+字节-最小的k个数)
+- [leetcode347-前K个高频元素](./堆/leetcode347-前K个高频元素.md)
