--- a/algorithm/排序/堆排序.md
+++ b/algorithm/排序/堆排序.md
@@ -1,8 +1,8 @@
-## 思路 - TBD
+## 思路 - [复习完堆方面的知识后回看就清晰了]
 
-- 创建一个大顶堆【大顶堆概念：每个节点的值都大于或者等于它的左右子节点的值，所以顶点的数就是最大值。】，大顶堆的堆顶一定是最大的元素。
+- 创建一个大顶堆【大顶堆概念：每个节点的值都大于它的左右子节点的值，所以顶点的数就是最大值】，大顶堆的堆顶一定是最大的元素。 【反之，小顶堆就是堆顶是最小的元素】
 
-- 交换第一个元素和最后一个元素，让剩余的元素继续调整为大顶堆。
+- 交换第一个元素和最后一个元素，让剩余的元素继续调整为大顶堆。【有了初始堆之后就可以进行排序了。顶堆元素和堆底元素互换】
 
 - 从后往前以此和第一个元素交换并重新构建，排序完成。
 
@@ -10,46 +10,54 @@
 
 
 ```js
-    function heapSort(array) {
-      creatHeap(array);
-      console.log(array);
-      // 交换第一个和最后一个元素，然后重新调整大顶堆
-      for (let i = array.length - 1; i > 0; i--) {
-        [array[i], array[0]] = [array[0], array[i]];
-        adjust(array, 0, i);
-      }
-      return array;
-    }
 
-    // 构建大顶堆，从第一个非叶子节点开始，进行下沉操作
-    function creatHeap(array) {
-      const len = array.length;
-      const start = parseInt(len / 2) - 1;
-      for (let i = start; i >= 0; i--) {
-        adjust(array, i, len);
-      }
-    }
-    
-    // 将第target个元素进行下沉，孩子节点有比他大的就下沉
-    function adjust(array, target, len) {
-      for (let i = 2 * target + 1; i < len; i = 2 * i + 1) {
-        // 找到孩子节点中最大的
-        if (i + 1 < len && array[i + 1] > array[i]) {
-          i = i + 1;
-        }
-        // 下沉
-        if (array[i] > array[target]) {
-          [array[i], array[target]] = [array[target], array[i]]
-          target = i;
-        } else {
-          break;
-        }
-      }
-    }
+// 堆排序函数
+function heapSort(arr) {
+  // 构建最大堆
+  buildMaxHeap(arr);
+  const len = arr.length
+  for (let i=len-1; i>0; i--) {
+    [arr[i], arr[0]] = [arr[0], arr[i]]
+    //  注意这里的参数！！！ 堆化剩余的长度，也就是i
+    heap(arr, i, 0)
+  }
 
+  return arr
+  
+}
 
-时间复杂度 
-空间复杂度 
-稳定
+function buildMaxHeap(heap) {
+  const len = heap.length
+
+  for(let i=Math.floor(len/2)-1; i>=0; i--) {
+    heaplify(heap, len, i)
+  }
+}
+/**
+ * heap
+ * len 堆长度
+ * i 当前位置
+ */
+function heaplify(heap, len, i) {
+  let max = i
+  const left = 2*i+1
+  const right = 2*i+2
+
+  if (left < len && heap[left] > heap[max]) {
+    max = left
+  }
+  if (right < len && heap[right] > heap[max]) {
+    max = right
+  }
+
+  if (max !== i) {
+    [heap[i], heap[max]] = [heap[max], heap[i]]
+    heaplify(heap, len, max)
+  }
+}
+
+时间复杂度  O(nlogn)
+空间复杂度  O(1)
+不稳定
 
 ```
