feat: 删除链表中重复的节点

--- a/dataStructure/链表/删除链表中的节点.md
+++ b/dataStructure/链表/删除链表中的节点.md
@@ -20,20 +20,91 @@ var deleteNode = function (head, node) {
   if (node.next) {
     node.val = node.next.val
     node.next = node.next.next
-    //  删除的节点是头节点&尾节点
   } else if (node === head) {
+    //  删除的节点是头节点&尾节点
     node = null
     head = null
-    //  删除的节点是尾节点且不是头节点
   } else {
-    node = head 
-    while(node.next.next) {
-      node = node.next
+    //  删除的节点是尾节点且不是头节点
+    let cur = head 
+    while(cur.next !== node) {
+      cur = cur.next
     }
-    node.next = null
+    cur.next = null
 
   }
 }
 ```
 
-##  删除链表中重复的节点 -TBD
+##  删除链表中重复的节点 [重复的都删除]
+
+### 思路1 - 哈希表法
+```js
+//  使用一个哈希表记录每个节点值出现的次数，然后再遍历链表将出现次数大于1的节点删除。
+function deleteDuplication2(head) {
+  if (!head || !head.next) {
+    return head;
+  }
+
+  let map = new Map()
+  let cur = head
+  //  遍历 记录每个节点出现次数
+  while(cur) {
+    if (map.has(cur.val)) {
+      map.set(map.get(cur.val) + 1)
+    } else {
+      map.set(1)
+    }
+    cur = cur.next
+  }
+  //  新建head 前的一个节点
+  let rel = new ListNode(0)
+  rel.next = head
+  //  记录前一个节点
+  let prev = rel
+  cur = head
+
+  while(cur) {
+    //  次数超过1
+    if (map.get(cur.val) > 1) {
+      //  跳过cur
+      pre.next = cur.next
+    } else {
+      pre.next = cur
+    }
+
+    cur = cur.next
+  }
+
+  return rel.next
+}
+
+O(n)
+O(n)
+```
+### 思路2 - 递归法
+```js
+//  对于当前节点，如果其与下一个节点值相同，则将其删除，并递归删除后面的节点。如果当前节点与下一个节点值不同，则递归处理后面的节点。
+
+function deleteDuplication3(head) {
+  if (!head || !head.next) {
+    return head;
+  }
+  //  头节点 和 后面的节点值相等
+  if (head.val === head.next.val) {
+    let cur = head.next
+    //  遍历 直到不相等
+    while(cur && cur.val === head.val) {
+      cur = cur.next
+    }
+    return deleteDuplication3(cur)
+  } else {
+    //  若头节点 和 后面的节点值不相等， 继续看后面的值
+    head.next = deleteDuplication3(head.next)
+
+    return head
+  }
+}
+O(n)
+O(n)
+```
