feat: update字符串排列

--- a/dataStructure/字符串/字符串排列.md
+++ b/dataStructure/字符串/字符串排列.md
@@ -1,4 +1,4 @@
-## 题目 - TBD
+## 题目
 
 输入一个字符串,按字典序打印出该字符串中字符的所有排列。例如输入字符串`abc`,则打印出由字符`a,b,c`所能排列出来的所有字符串`abc,acb,bac,bca,cab和cba`。
 
@@ -28,20 +28,30 @@ function Permutation(str) {
   result.sort();
   return [... new Set(result)];
 }
-
+/**
+ * queue - 字符数组
+ * result - 结果数组
+ * temp - 临时字符串
+ * current - 当前字符串
+ */
 function PermutationCore(queue, result, temp = "", current = "") {
   current += temp;
+  //  说明已经处理完所有的字符，即得到了一个完整的全排列[注意终止条件!!!]
   if (queue.length === 0) {
     result.push(current);
     return;
   }
+  //  对字符数组 queue 进行循环遍历，依次取出每个字符作为临时字符
   for (let i = 0; i < queue.length; i++) {
+    //  将队列中的第一个字符移除并赋值给临时变量 temp。这样做是为了保证每次递归调用时，都会处理队列中的下一个字符
     temp = queue.shift();
     PermutationCore(queue, result, temp, current);
+    // 将临时字符 temp 放回队列的末尾
     queue.push(temp);
   }
 }
 
-
+tip:
+递归的终止条件需要明确！！！！！
 
 ```
