--- a/js/继承.md
+++ b/js/继承.md
@@ -133,6 +133,7 @@ function createObj (o) {
 跟构造函数模式一样，每次创建对象都会创建一遍方法。
 
 ## 6.寄生组合继承[TBD]
+review
 ```js
 function Parent (name) {
     this.name = name;
