--- a/dataStructure/二叉树/字节-两个指定节点间的最短距离.md
+++ b/dataStructure/二叉树/字节-两个指定节点间的最短距离.md
@@ -1,5 +1,5 @@
-给定一个二叉树, 找到该树中两个指定节点间的最短距离
-TBD
+给定一个二叉树, 找到该树中两个指定节点间的最短距离 - review
+
 ## 思路
 
 求最近公共祖先节点，然后再求最近公共祖先节点到两个指定节点的路径，再求两个节点的路径之和
@@ -21,14 +21,22 @@ const lowestCommonAncestor = (root, p, q) => {
 const shortestDistance = function(root, p, q) {
   // 最近公共祖先
   const lowestCA = lowestCommonAncestor(root, p, q)
-  // 分别求出公共祖先到两个节点的路经
+  
+  //  方法1----------------
+  // 分别求出公共祖先到两个节点的路径
   let pDis = [], qDis = []
   getPath(lowestCA, p, pDis)
   getPath(lowestCA, q, qDis)
   // 返回路径之和
   return (pDis.length + qDis.length)
-}
 
+  //  方法2----------------
+  // const distP = findDistanceToNode(lowestCA, p, 0); // 计算节点p到公共祖先的距离
+  // const distQ = findDistanceToNode(lowestCA, q, 0); // 计算节点q到公共祖先的距离
+
+  // return distP + distQ;
+}
+//  方法一
 const getPath = (root, p, paths) => {
   // 找到节点，返回 true
   if (root == p) return true
@@ -49,6 +57,21 @@ const getPath = (root, p, paths) => {
   }
 
   return hasFound
+}
+
+//  方法二
+function findDistanceToNode(root, target, distance) {
+  if (!root) return -1;
+
+  if (root === target) return distance;
+
+  const left = findDistanceToNode(root.left, target, distance + 1);
+  if (left !== -1) return left;
+
+  const right = findDistanceToNode(root.right, target, distance + 1);
+  if (right !== -1) return right;
+
+  return -1;
 }
 
 ```
