--- a/dataStructure/二叉树/剑指-二叉搜索树与双向链表.md
+++ b/dataStructure/二叉树/剑指-二叉搜索树与双向链表.md
@@ -1,9 +1,10 @@
-## 题目 - TBD
+## 题目
 - review
+
 输入一棵二叉搜索树，将该二叉搜索树转换成一个排序的`循环双向链表`。要求不能创建任何新的结点，只能调整树中结点指针的指向。
 
 tip: 二叉搜索树[查找、排序] 的 中序遍历 就是 返回从小到大的排序
-详见 [here](./二叉搜索树的第k个节点.md)
+详见 [here](./leetcode+tx-二叉搜索树的第k个节点.md)
 
 循环双向链表 - 链表中的每个节点都有一个前驱和后继指针。对于双向循环链表，第一个节点的前驱是最后一个节点，最后一个节点的后继是第一个节点。
 
@@ -38,9 +39,9 @@ var treeToDoublyList = function (root) {
         return null;
     }
 
-    //  链表的表头
+    //  链表的头节点
     let head = null;
-    // 用于记录前一个节点
+    // 当前节点的 前一个节点
     let pre = null;
     //  中序遍历
     const dfs = node => {
