--- a/dataStructure/图.md
+++ b/dataStructure/图.md
@@ -12,4 +12,8 @@
 
 ![Alt text](/images/邻接表.png)
 
-TBD - 接题目
+[leetcode997-找到小镇的法官](./图/leetcode997-找到小镇的法官.md)
+[leetcode207-课程表问题](./图/leetcode207-课程表问题.md)
+[剑指Offer+Bigo-旋转矩阵](./图/剑指Offer+Bigo-旋转矩阵.md)
+[腾讯+leetcode-螺旋矩阵II](./图/腾讯+leetcode-螺旋矩阵II.md)
+[字节+剑指-顺时针打印矩阵](./图/字节+剑指-顺时针打印矩阵.md)
