--- a/dataStructure/数组.md
+++ b/dataStructure/数组.md
@@ -32,7 +32,7 @@ ES6 的新增了 ArrayBuffer ，它可以创建内存空间连续的数组。显
 > 建立一定的抽象建模能力，将实际中的很多问题进行抽象
 
 - [构建乘积数组](./数组/构建乘积数组)
-- [顺时针打印矩阵](./数组/顺时针打印矩阵)
+- [字节+剑指-顺时针打印矩阵](./数组/字节+剑指-顺时针打印矩阵)
 
 
 ### 数据统计
