--- a/dataStructure/数组/字节+剑指-顺时针打印矩阵.md
+++ b/dataStructure/数组/字节+剑指-顺时针打印矩阵.md
@@ -1,4 +1,5 @@
 ## 题目
+https://leetcode.cn/problems/shun-shi-zhen-da-yin-ju-zhen-lcof/description/
 
 输入一个矩阵，按照从外向里以顺时针的顺序依次打印出每一个数字。
 
@@ -89,4 +90,54 @@ function printCircle(matrix, start, coloums, rows, result) {
   }
 }
 
+```
+
+## 思路2
+
+借助 [腾讯+leetcode-螺旋矩阵II](./图/腾讯+leetcode-螺旋矩阵II.md) 的思想：
+
+用四个变量up, down, left, right分别记录当前上下左右范围，每遍历一行或一列就修改相应的值。
+例如遍历了上面第一行，就应该把up加一，遍历了右边第一列就应把right减一
+
+```js
+//  假设是m*n 的矩阵
+function spiralArray(matrix) {
+  let m = matrix.length
+    if (m === 0) {
+    return []
+  }
+  let n = matrix[0].length
+
+  let result = []
+
+  let left = 0, right = n-1, top = 0, bottom = m-1
+
+  while(true) {
+    for (let i=left; i<=right; i++) {
+      result.push(matrix[top][i])
+    }
+    top++
+    if (top>bottom) break
+
+    for (let i=top; i<=bottom; i++) {
+      result.push(matrix[i][right])
+    }
+    right--
+    if (right < left) break
+
+    for (let i=right; i>=left; i--) {
+      result.push(matrix[bottom][i])
+    }
+    bottom--
+    if (bottom < top) break
+
+    for (let i=bottom; i>=top; i--) {
+      result.push(matrix[i][left])
+    }
+    left++
+    if (left > right) break
+  }
+
+  return result
+}
 ```
