--- a/dataStructure/数组.md
+++ b/dataStructure/数组.md
@@ -48,7 +48,7 @@ ES6 的新增了 ArrayBuffer ，它可以创建内存空间连续的数组。显
 ### 其他
 
 - [把数组排成最小的数](./数组/把数组排成最小的数.md)
-- [数组中的逆序对](./数组/数组中的逆序对.md)
+- [剑指-数组中的逆序对](./数组/剑指-数组中的逆序对.md)
 - [在排序数组中查找数字](./数组/在排序数组中查找数字.md)
 - [ali:编写一个函数计算多个数组的交集](./数组/ali:编写一个函数计算多个数组的交集.md)
 - [leetcode88：合并两个有序数组](./数组/leetcode88：合并两个有序数组.md)
