feat: 算法内容 update

--- a/algorithm/算法.md
+++ b/algorithm/算法.md
@@ -22,7 +22,21 @@
 
 ### 数学运算
 
+二进制中1的个数⭐⭐
+数值的整数次方⭐⭐
+数组中只出现一次的数字⭐⭐
+不用加减乘除做加法⭐⭐
+字符串转换成整数⭐⭐
+整数中1出现的次数⭐⭐⭐
+1+2+3+...+n⭐⭐⭐
+丑数⭐⭐⭐
+
 ### 查找
+
+查找-概览
+二维数组查找⭐⭐
+在排序数组中查找数字⭐⭐
+整数中1出现的次数⭐⭐
 
 相关题目
 - 腾讯：简述二分查找算法与时间复杂度，并实现一个二分查找算法
@@ -32,16 +46,36 @@
 
 ### DFS BFS
 
+DFS和BFS-概览
 
 ### 递归和循环
 
+递归-概览
+斐波拉契数列⭐⭐
+跳台阶⭐⭐
+变态跳台阶⭐⭐
+矩形覆盖⭐⭐
 
 ### 回溯算法
+
+回溯-概览
+二叉树中和为某一值的路径⭐⭐⭐
+字符串的排列⭐⭐⭐
+和为sum的n个数⭐⭐⭐
+矩阵中的路径⭐⭐⭐
+机器人的运动范围⭐⭐⭐
+N皇后问题⭐⭐⭐
+N皇后问题2⭐⭐⭐
 
 百度&leetcode46：全排列问题
 腾讯&leetcode22：括号生成
 
 ### 动态规划
+
+动态规划-概览
+斐波拉契数列⭐⭐
+最小路径和⭐⭐⭐
+打家劫舍⭐⭐⭐
 
 相关题目
 字节&leetcode70：爬楼梯问题
@@ -53,6 +87,9 @@
 阿里&网易&leetcode64：最小路径和
 
 ### 贪心算法
+
+贪心算法-概览
+分发饼干⭐⭐
 
 字节&leetcode122：买卖股票的最佳时机 II
 字节&leetcode455：分发饼干
