--- a/dataStructure/字符串.md
+++ b/dataStructure/字符串.md
@@ -4,6 +4,8 @@
 
 注意⚠️: substr 方法弃用
 
+常用api - https://juejin.cn/post/7240697872160440380
+
 - [百度：判断回文字符串](./字符串/百度：判断回文字符串.md)
 - [表示数值的字符串](./字符串/表示数值的字符串.md)
 - [翻转单词顺序](./字符串/翻转单词顺序.md)
