--- a/algorithm/排序/快速排序.md
+++ b/algorithm/排序/快速排序.md
@@ -33,6 +33,14 @@ function quick(arr) {
   return []
 }
 
+时间复杂度
+平均 O(nlogn)
+最差 O(n^2)  - 每次选取的基准元素都是当前数组中的最大或最小值，导致每次递归只能处理一个元素
+
+空间复杂度
+O(nlogn)
+
+不稳定！！！！！【选择的数是随机的，所以和之相等的数可能会被放在右边】
 
 ```
 
