--- a/js/数组乱序-洗牌算法.md
+++ b/js/数组乱序-洗牌算法.md
@@ -7,7 +7,7 @@ function disorder(array) {
   const length = array.length;
   for (let start = length - 1; start > -1; start -= 1) {
     //  Math.random()返回 0 - 1之间的数，包括0
-    target = Math.floor(length * Math.random());
+    target = Math.floor((start + 1) * Math.random());
     //  交换数组的两个数 - 技巧！！！
     [array[start], array[target]] = [array[target], array[start]];
   }
