feat: shell sort

--- a/algorithm/排序/插入排序.md
+++ b/algorithm/排序/插入排序.md
@@ -5,6 +5,8 @@
 
 注意：是插入，并非交换！！！！ 代码实现上是逐个移位交换
 
+插入算法的核心思想是取未排序区间中的元素，在已排序区间中找到合适的插入位置将其插入，并保证已排序区间数据一直有序。重复这个过程，直到未排序区间中元素为空，算法结束。
+
 ```js
 function insert(arr) {
   if (Array.isArray(arr)) {
@@ -27,6 +29,7 @@ function insert(arr) {
   return []
 }
 
+//  希尔排序参照的模板
 function insert(arr) {
   if (Array.isArray(arr)) {
     let preIndex
@@ -49,6 +52,7 @@ function insert(arr) {
   return []
 }
 
-
+O(n^2)
+O(1)
 ```
 
