--- a/algorithm/排序/希尔排序.md
+++ b/algorithm/排序/希尔排序.md
@@ -8,6 +8,25 @@ shell排序的步骤：
 
 分组数量: `Math.floor(arr.length/2)` ; 通常增量为len / 2
 
+## example
+
+例如：
+
+let arr = [4, 1, 5, 8, 7, 3]
+排序前：
+
+将该数组看成三组 Math.floor(arr.length/2)，分别是： [4, 8] ， [1, 7] ， [5, 3]
+
+第一趟排序：
+
+对三组数据分别进行插入排序，因此我们三个数组得到的结果为： [4, 8] ， [1, 7] ， [3, 5]
+此时数组是这样子的：[4, 1, 3, 8, 7, 5]
+
+第二趟排序：
+
+增量减少了，上面增量是 3 ，此时增量应该为 1 了，因此把 [4, 1, 3, 8, 7, 5] 看成一个数组(从宏观上是有序的了)，对其进行插入排序，直至有序
+
+
 ```js
 function shell(arr) {
   if (Array.isArray(arr)) {
@@ -23,6 +42,7 @@ function shell(arr) {
           arr[j] = arr[j - gap]
           j = j - gap
         }
+        //  注意！！！
         arr[j] = current
       }
     }
@@ -33,6 +53,6 @@ function shell(arr) {
   return []
 }
 
-
+时间复杂度：O(nlogn)
+空间复杂度：O(1)
 ```
-
