--- a/algorithm/算法.md
+++ b/algorithm/算法.md
@@ -12,7 +12,7 @@
 相关题目
 - [腾讯&字节：介绍一下快排原理以及时间复杂度，并实现一个快排](/algorithm/排序/快速排序.md)
 - [字节+阿里+网易+leetcode384-打乱数组（洗牌算法）](/algorithm/排序/字节+阿里+网易+leetcode384-打乱数组.md)
-- 阿里五面：说下希尔排序的过程？ 希尔排序的时间复杂度和空间复杂度又是多少？
+- [阿里五面：说下希尔排序的过程？ 希尔排序的时间复杂度和空间复杂度又是多少？](/algorithm/排序/希尔排序.md)
 - 腾讯&leetcode148：排序链表
 - 字节算法题：扑克牌问题（反向推导题）
 - 腾讯&leetcode611：有效三角形的个数
