--- a/algorithm/排序/希尔排序.md
+++ b/algorithm/排序/希尔排序.md
@@ -10,6 +10,10 @@ shell排序的步骤：
 
 ## example
 
+希尔排序又叫缩小增量排序，就是把数列进行分组(组内不停使用插入排序)，直至从宏观上看起来有序，最后插入排序起来就容易了(无须多次移位或交换)。
+
+其中组的数量称为 增量 ，显然的是，增量是不断递减的(直到增量为1)
+
 例如：
 
 let arr = [4, 1, 5, 8, 7, 3]
