--- a/algorithm/排序/快速排序.md
+++ b/algorithm/排序/快速排序.md
@@ -42,5 +42,9 @@ O(nlogn)
 
 不稳定！！！！！【选择的数是随机的，所以和之相等的数可能会被放在右边】
 
+
+快排的原理是基于二分法的思想，时间复杂度比较复杂，最好的情况是O(N)，最差的时候是O(N^2)，所以平时说的O(N*logN)为其平均时间复杂度。
+
+它的基本思想是：通过一趟排序将要排序的数据分割成独立的两部分，其中一部分的所有数据都比另外一部分的所有数据都要小，然后再按此方法对这两部分数据分别进行快速排序，整个排序过程可以递归进行，以此达到整个数据变成有序序列。
 ```
 
