feat: update 算法相关

--- a/algorithm/算法.md
+++ b/algorithm/算法.md
@@ -14,8 +14,8 @@
 - [字节+阿里+网易+leetcode384-打乱数组（洗牌算法）](/algorithm/排序/字节+阿里+网易+leetcode384-打乱数组.md)
 - [阿里五面：说下希尔排序的过程？ 希尔排序的时间复杂度和空间复杂度又是多少？](/algorithm/排序/希尔排序.md)
 - [腾讯+leetcode148-排序链表](/algorithm/排序/tx+leetcode148-排序链表.md)
-- 字节算法题：扑克牌问题（反向推导题）
-- 腾讯&leetcode611：有效三角形的个数
+- [字节算法题-扑克牌问题](/algorithm/排序/字节算法题-扑克牌问题.md)
+- [腾讯&leetcode611：有效三角形的个数](/dataStructure//链表/leetcode611+tx-有效三角形的个数.md)
 
 ### 分治
 - [剑指-数组中的逆序对【归并排序】](/dataStructure/数组/剑指-数组中的逆序对.md)
