fix: file url issue

--- a/algorithm/算法.md
+++ b/algorithm/算法.md
@@ -1,24 +1,24 @@
 ### 排序
-- [汇总](/algorithm/排序/README.md)
+- [汇总](./排序/README.md)
 
-- [冒泡](/algorithm/排序/冒泡排序.md)
-- [插入](/algorithm/排序/插入排序.md)
-- [选择](/algorithm/排序/选择排序.md)
-- [希尔](/algorithm/排序/希尔排序.md)
-- [快速](/algorithm/排序/快速排序.md)
-- [归并](/algorithm/排序/归并排序.md)
-- [堆排序](/algorithm/排序/堆排序.md)
+- [冒泡](./排序/冒泡排序.md)
+- [插入](./排序/插入排序.md)
+- [选择](./排序/选择排序.md)
+- [希尔](./排序/希尔排序.md)
+- [快速](./排序/快速排序.md)
+- [归并](./排序/归并排序.md)
+- [堆排序](./排序/堆排序.md)
 
 相关题目
-- [腾讯&字节：介绍一下快排原理以及时间复杂度，并实现一个快排](/algorithm/排序/快速排序.md)
-- [字节+阿里+网易+leetcode384-打乱数组（洗牌算法）](/algorithm/排序/字节+阿里+网易+leetcode384-打乱数组.md)
-- [阿里五面：说下希尔排序的过程？ 希尔排序的时间复杂度和空间复杂度又是多少？](/algorithm/排序/希尔排序.md)
-- [腾讯+leetcode148-排序链表](/algorithm/排序/tx+leetcode148-排序链表.md)
-- [字节算法题-扑克牌问题](/algorithm/排序/字节算法题-扑克牌问题.md)
-- [腾讯&leetcode611：有效三角形的个数](/dataStructure//链表/leetcode611+tx-有效三角形的个数.md)
+- [腾讯&字节：介绍一下快排原理以及时间复杂度，并实现一个快排](./排序/快速排序.md)
+- [字节+阿里+网易+leetcode384-打乱数组（洗牌算法）](./排序/字节+阿里+网易+leetcode384-打乱数组.md)
+- [阿里五面：说下希尔排序的过程？ 希尔排序的时间复杂度和空间复杂度又是多少？](./排序/希尔排序.md)
+- [腾讯+leetcode148-排序链表](./排序/tx+leetcode148-排序链表.md)
+- [字节算法题-扑克牌问题](./排序/字节算法题-扑克牌问题.md)
+- [腾讯&leetcode611：有效三角形的个数](../dataStructure//链表/leetcode611+tx-有效三角形的个数.md)
 
 ### 分治
-- [剑指-数组中的逆序对【归并排序】](/dataStructure/数组/剑指-数组中的逆序对.md)
+- [剑指-数组中的逆序对【归并排序】](../dataStructure/数组/剑指-数组中的逆序对.md)
 
 ### 数学运算
 
