--- a/dataStructure/图.md
+++ b/dataStructure/图.md
@@ -4,7 +4,7 @@
 
 图的一种存储方式是 “邻接矩阵”。邻接矩阵就是一个二维数组，`A[i][j] === A[j][i]。`
 
-![Alt text](/images/图.png)
+![Alt text](../images/图.png)
 
 1-邻接矩阵记录了所有顶点之间的关系，但其实很多顶点之间是没有关系的，所有这就造成了存储空间的浪费。但是邻接矩阵在获取两个顶点之间的关系时很高效。
 
@@ -22,7 +22,7 @@ const graph = {
 };
 ```
 
-![Alt text](/images/邻接表.png)
+![Alt text](../images/邻接表.png)
 
 其他知识：
 
@@ -42,11 +42,11 @@ const graph = {
 
 当图的每条边都被分配了权重时，我们就有了一个加权图（weighted graph）
 
-![Alt text](/images/图小结.png)
+![Alt text](../images/图小结.png)
 
 
 - [leetcode997-找到小镇的法官](./图/leetcode997-找到小镇的法官.md)
 - [leetcode207-课程表问题](./图/leetcode207-课程表问题.md)
 - [剑指Offer+Bigo-旋转矩阵](./图/剑指Offer+Bigo-旋转矩阵.md)
 - [腾讯+leetcode-螺旋矩阵II](./图/腾讯+leetcode-螺旋矩阵II.md)
-- [字节+剑指-顺时针打印矩阵](/数组/字节+剑指-顺时针打印矩阵)
+- [字节+剑指-顺时针打印矩阵](./数组/字节+剑指-顺时针打印矩阵)
