--- a/dataStructure/数组/剑指-数组中的逆序对.md
+++ b/dataStructure/数组/剑指-数组中的逆序对.md
@@ -13,7 +13,7 @@ https://leetcode.cn/problems/shu-zu-zhong-de-ni-xu-dui-lcof/description/
 
 归并排序的方法。先将两个数组进行拆分，然后归并的时候统计逆序数就行了
 
-![Alt text](/images/数组中的逆序对.png)
+![Alt text](../../images/数组中的逆序对.png)
 
 ```js
 /**
