--- a/algorithm/数学运算/二进制中1的个数.md
+++ b/algorithm/数学运算/二进制中1的个数.md
@@ -1,5 +1,27 @@
 输入一个整数，输出该数二进制表示中1的个数。`其中负数用补码表示`。
 
+```js
+function countOneBits(num) {
+  let count = 0;
+  // 对于负数，先转换为补码表示
+  if (num < 0) {
+    num = (num >>> 0).toString(2);
+  } else {
+    num = num.toString(2);
+  }
+  
+  // 遍历二进制表示，统计1的个数
+  for (let i = 0; i < num.length; i++) {
+    if (num[i] === '1') {
+      count++;
+    }
+  }
+
+  return count;
+}
+
+```
+
 ## 背景
 
 这是一道考察二进制的题目
@@ -20,24 +42,39 @@
 
 `00001010>>2 = 00000010`
 
-> 对于一个给定的整数，其补码表示方式如下：<br>
-对于正数，补码与原码相同。<br>
-对于负数，先求其绝对值的二进制表示，然后按位取反（0 变为 1，1 变为 0），再将结果加 1。
-
-
-```js
-function countBits(n) {
-  let count = 0
-  while(n !== 0) {
-    //  // 判断最低位是否为1
-    if (n & 1) count++
-    //  // 逻辑右移，将最低位丢弃
-    n = n >> 1
-  }
-
-  return count
-}
 ```
+//  拿四位二进制举例
+1110 -6  //原码 [符号位是1]
+1010 （1001 + 1）//补码
+```
+
+> 补码 <br>
+对于一个给定的整数，其补码表示方式如下：<br>
+对于正数，补码与原码相同。<br>
+*对于负数，先求其绝对值的二进制表示，然后按位取反（0 变为 1，1 变为 0），再将结果加 1。*
+
+> 反码 <br>
+正数的反码为本身<br>
+*负数的反码为除符号位不变，其余位取反*
+
+-5的原码为：1 0000101
+
+-5的反码为：1 1111010
+
+-5的补码为：1 1111011
+
+```
+无符号右移>>>
+>>>右移动指定的位数。向右被移出的位被丢弃，左侧用0填充。因为符号位变成了0，所以结果总是非负的。
+
+有符号右移>> [负数以补码的形式右移]
+>>向右移动指定的位数。向右被移出的位被丢弃，拷贝最左侧的位以填充左侧。由于新的最左侧的位总是和以前相同，符号位没有被改变。所以被称作“符号传播”。
+```
+
+`js中会将数值转成对应的二进制*补码*，再执行位运算`，运算结束后，将结果转换成原码表示数值。
+
+零填充右移运算>>>，符号位也参与运算，零填充右移的结果恒为非负值。
+
 
 ### JS中如何转换为其他进制
 
@@ -113,6 +150,29 @@ parseInt(string, radix);
 3. 如果输入的 string 以任何其他值开头，radix 是 10 (十进制)。
 ```
 
+
+### Math. 相关函数介绍
+```js
+//  绝对值
+Math.abs("-1"); // 1
+Math.abs(-2); // 2
+Math.abs(null); // 0
+Math.abs(""); // 0
+Math.abs([]); // 0
+Math.abs([2]); // 2
+Math.abs([1, 2]); // NaN
+
+//  Math.exp() 函数返回 e^x
+Math.exp(1); // 2.718281828459045
+//  Math.log() 函数返回一个数的自然对数
+Math.log(1); // 0
+
+//  Math.log10() 函数返回一个数字以 10 为底的对数。
+//  Math.log2() 函数返回一个数字以 2 为底的对数。
+//  Math.pow(base, exponent) 函数返回基数（base）的指数（exponent）次幂，即 base^exponent。
+//  Math.sqrt() 函数返回一个数的平方根
+```
+
 相关面试题
 ```js
 ["1", "2", "3"].map(parseInt);
@@ -124,4 +184,24 @@ parseInt(string, radix);
 // map方法在调用callback函数时,会给它传递三个参数:当前正在遍历的元素, 元素索引, 原数组本身.
 
 // 第三个参数parseInt会忽视, 但第二个参数不会,也就是说,parseInt把传过来的索引值当成进制数来使用.从而返回了NaN.
+
+0.1 + 0.2 === 0.3 //  false
+
+计算机无法直接对十进制的数字进行运算，这是硬件物理特性已经决定的。这样运算就分成了两个部分：先按照IEEE 754转成相应的二进制，然后对阶运算
+
+二进制模拟十进制进行计算时 的精度问题
+
+精度损失可能出现在进制转化和对阶运算过程中
+
+怎么解决精度问题？ 
+- Math.js / big.js
+
+2的-1074方（Number.MIN_VALUE）和 2的1024方-1（Number.MAX_VALUE）之间的正浮点数
+
+只有在 -2^53 + 1 到 2^53 - 1 范围内（闭区间）的整数才能在不丢失精度的情况下被表示（可通过 Number.MIN_SAFE_INTEGER 和 Number.MAX_SAFE_INTEGER 获得），因为尾数只能容纳 53 位（包括前导 1）。
+
+“安全”指的是能够精确表示整数并正确比较它们。例如，Number.MAX_SAFE_INTEGER + 1 === Number.MAX_SAFE_INTEGER + 2 的结果将为真，这在数学上是不正确的。
+
+Number.MAX_VALUE * 2  //  Infinity
+
 ```
