--- a/algorithm/算法.md
+++ b/algorithm/算法.md
@@ -23,13 +23,13 @@
 ### 数学运算
 
 - [二进制中1的个数⭐⭐](./数学运算/二进制中1的个数.md)
-数值的整数次方⭐⭐
-数组中只出现一次的数字⭐⭐
-不用加减乘除做加法⭐⭐
-字符串转换成整数⭐⭐
-整数中1出现的次数⭐⭐⭐
-1+2+3+...+n⭐⭐⭐
-丑数⭐⭐⭐
+- [数值的整数次方⭐⭐](./数学运算/数值的整数次方.md)
+- [数组中只出现一次的数字⭐⭐](./数学运算/数组中只出现一次的数字.md)
+- [不用加减乘除做加法⭐⭐](./数学运算/不用加减乘除做加法.md)
+- [字符串转换成整数⭐⭐](./数学运算/字符串转换成整数.md)
+- [整数中1出现的次数⭐⭐⭐](./数学运算/整数中1出现的次数.md)
+- [1+2+3+...+n⭐⭐⭐](./数学运算/1+2+3+...+n.md)
+- [丑数⭐⭐⭐](./数学运算/丑数.md)
 
 ### 查找
 
